...
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/get_started_button"
            style="@style/Widget.PawHaven.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/get_started"
            app:layout_constraintBottom_toBottomOf="parent"
...
