...
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/petDetailAge" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/adoptButton"
            style="@style/Widget.PawHaven.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/adopt_a_paw"
            android:visibility="gone"
...
